--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>A whale of a greeting</title>
+        <title>Learn Enough JavaScript</title>
+        <meta charset="UTF-8">
+        <script>
+            alert("Hello, world!");
+        </script>
     </head>
 
     <body>
-        <h1>Hello world</h1>
-        <a href="about.html">About this project</a>
-        <p>Call me Ishmael.</p>
-        <img src="images/breaching_whale.jpg">
+        <h1>Hello world!</h1>
+        <p>This page includes an alert written in JavaScript.</p>
     </body>
 </html>
 
