--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <script>
             alert("Hello, world!");
+            alert("Another hello world!");
         </script>
     </head>
 
